@@ -113,7 +113,8 @@ has support for Hebrew and Arabic languages and allows to arrange
 contacts into groups.
 
   Centericq is known to build and work well under Linux, FreeBSD,
-OpenBSD, NetBSD, Sun Solaris and MacOS X/Darwin.
+OpenBSD, NetBSD, Sun Solaris, MacOS X/Darwin and Microsoft
+Windows (built with cygwin).
 
 
 1.1. Creation history
@@ -1733,4 +1734,4 @@ pleasure I get during the process.
 views of the nature in places where you live, baseball tickets ;) are
 also welcome.
 
-$Id: README,v 1.82 2003/04/18 17:07:30 konst Exp $
+$Id: README,v 1.83 2003/05/07 22:22:59 konst Exp $
