@@ -1,5 +1,3 @@
-CHECK THE PORTABILITY (MAC, FREEBSD, CYGWIN)
-
 /*
 *
 * DONE
@@ -45,4 +43,4 @@ try to implement the daemon mode
 
 todo and reminders
 
-$Id: TODO,v 1.417 2003/05/06 20:27:27 konst Exp $
+$Id: TODO,v 1.418 2003/05/07 22:22:59 konst Exp $
