@@ -1,5 +1,4 @@
 INCLUDES = -I$(top_srcdir)/src -I$(top_srcdir)/src/hooks -I/home/konst/devel/blip -I/home/konst/devel/firetalk -I/home/konst/devel/kktoolbox/kkconsui/include -I/home/konst/devel/kktoolbox/kkstrtext -I/home/konst/devel/libicq2000 -I/home/konst/devel/libjabber -I/home/konst/devel/libyahoo2 -I/home/konst/devel/kktoolbox/kksystr/include -I/home/konst/devel/connwrap -I$(top_srcdir)/intl
-CPPFLAGS = -DDEBUG -DPACKETDEBUG
 bin_PROGRAMS = centericq
 centericq_SOURCES = centericq.cc icqcontact.cc icqgroups.cc eventmanager.cc icqdialogs.cc icqhist.cc imexternal.cc imcontact.cc imlogger.cc accountmanager.cc icqcontacts.cc icqmlist.cc imcontroller.cc icqconf.cc imevents.cc icqface.cc centermain.cc icqgroup.cc
 centericq_LDFLAGS = -L/home/konst/devel/blip -L/home/konst/devel/firetalk -L/home/konst/devel/kktoolbox/kkconsui -L/home/konst/devel/kktoolbox/kkstrtext -L/home/konst/devel/libicq2000 -L/home/konst/devel/libjabber -L/home/konst/devel/libyahoo2 -L/home/konst/devel/kktoolbox/kksystr -L/home/konst/devel/connwrap
