@@ -1,5 +1,4 @@
 INCLUDES = -I$(top_srcdir)/src -I$(top_srcdir)/src/hooks -I/home/konst/devel/blip -I/home/konst/devel/firetalk -I/home/konst/devel/kktoolbox/kkconsui/include -I/home/konst/devel/kktoolbox/kkstrtext -I/home/konst/devel/libicq2000 -I/home/konst/devel/libjabber -I/home/konst/devel/libyahoo2 -I/home/konst/devel/kktoolbox/kksystr/include -I/home/konst/devel/connwrap -I$(top_srcdir)/intl
-CPPFLAGS = -DDEBUG -DPACKETDEBUG
 noinst_LIBRARIES = libhooks.a
 libhooks_a_SOURCES = yahoohook.cc jabberhook.cc aimhook.cc icqhook.cc irchook.cc msnhook.cc abstracthook.cc
 EXTRA_DIST = yahoohook.cc jabberhook.cc aimhook.cc icqhook.cc irchook.cc msnhook.cc abstracthook.cc yahoohook.h aimhook.h msnhook.h jabberhook.h icqhook.h irchook.h abstracthook.h
